<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ethercat_diff_drive</name>
  <version>0.0.1</version>
  <description> Package with instructions for running an EtherCAT compatible motor drive and use it in ROS2</description>
  <maintainer email="agan.simsek@gmail.com">Agan Simsek</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ethercat_driver</exec_depend>
  <exec_depend>ethercat_interface</exec_depend>
  <exec_depend>ethercat_generic_cia402_drive</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend> 
 
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
